Some Alignments Fixed on #2

--- a/2 - Admin Dashboard/assets/style.css
+++ b/2 - Admin Dashboard/assets/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .navbar {
-    background-color: #4f46e5;
+    background-image: linear-gradient(180deg, #4f46e5 0%,#4f46e5 80%, #1e1b4b 100%);
     flex-direction: column;
     display: flex;
 }
@@ -143,8 +143,7 @@ li a:hover {
     background-color: #4f46e5;
     border-radius: 25px;
     padding: 0.5rem;
-    height: 30%;
-    width: 50px;
+    width: 60px;
     justify-content: center;
     display: flex;
     transition-property: background-color;
@@ -216,22 +215,24 @@ input[type="search"] {
 }
 
 .anouncementsList {
-    margin: 10px;
+    margin-top: 15%;
     width: 100%;
-    gap: 10px;
-    align-items: center;
-    flex-direction: column;
-    display: flex;
+    height: 90%;
+    justify-content: space-around;
+    grid-template-rows: 16% 16% 16% 16% 16%;
+    display: grid;
 }
 
 .anouncement {
     width: 200px;
     font-size: 0.8rem;
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
 }
 
 .anouncement h4 {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin: 0;
     font-size: 0.9rem;
 }
 
@@ -240,8 +241,6 @@ input[type="search"] {
 }
 
 hr {
-    margin-top: 20px;
-    padding: 0;
     width: 100%;
     color: lightgrey;
 }
@@ -258,6 +257,9 @@ hr {
 
 .trendingContainer {
     margin: 20px;
+    height: 90%;
+    display: grid;
+    grid-template-rows: 30% 30% 30%;
 }
 
 .trendingUnit {
@@ -268,6 +270,7 @@ hr {
 }
 
 .trendingUnit h4 {
+    margin-top: 0;
     margin-bottom: 5px;
 }
 
